fix: full grid column on mobile

--- a/app/assets/css/form.css
+++ b/app/assets/css/form.css
@@ -154,7 +154,7 @@ textarea {
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .form-group.full {
+  .full-grid {
     grid-column: span 1;
   }
 }
